add gateway and rabbitmq

--- a/src/gateway/Dockerfile
+++ b/src/gateway/Dockerfile
@@ -1,9 +1,9 @@
 FROM python:3.12-slim-bullseye
 
 RUN apt-get update \
-  && apt-get install -y pkg-config \
+  && apt-get install -y \
   --no-install-recommends --no-install-suggests \
-  build-essential default-libmysqlclient-dev \
+  build-essential \
   && pip install --no-cache-dir --upgrade pip
 
 WORKDIR /app
