--- a/src/converter/Dockerfile
+++ b/src/converter/Dockerfile
@@ -1,9 +1,8 @@
-FROM python:3.12-slim-bullseye
+FROM python:3.10-slim-bullseye
 
 RUN apt-get update \
-  && apt-get install -y \
-  --no-install-recommends --no-install-suggests \
-  build-essential \
+  && apt-get install -y --no-install-recommends --no-install-suggests \
+  build-essential ffmpeg \
   && pip install --no-cache-dir --upgrade pip
 
 WORKDIR /app
@@ -11,6 +10,4 @@ COPY ./requirements.txt /app
 RUN pip install --no-cache-dir --requirement /app/requirements.txt
 COPY . /app
 
-EXPOSE 5001
-
-CMD ["python3", "server.py"]
+CMD ["python3", "consumer.py"]
